# programming

./: .gitignore  main
code_templates/: cpp_template.cpp  hpp_template.hpp  py_template.py
cpp/: Readme.md
cpp/SWTest/pierniczki/: input1.txt  input2.txt  input3.txt  test  test.cpp
cpp/SWTest/template/: input.txt  judge.cpp  judge.h  template.cpp
cpp/kalkulator/: CMakeLists.txt  gtestBasicOperations.cpp  gtestBasicOperations.out  main.cpp  main.out
cpp/leetcode/: Readme.md
python/etc/: 1.txt  2.txt  clicker.py  generators.py
python/leetcode/: 14_Longest_Common_Prefix.py  1_Two_Sum  21_Merge_Two_Sorted_Lists.py  46_permutations.py  78_subsets.py  9_Palindrome_Number.py  TODO.md  usefull_tools.py
python/leetcode/14_Longest_Common_Prefix/: Readme.md  Solution.py
python/leetcode/plecaki/: plecak.py
python/plecaki/: plecaki.py
